Add robots.txt to prevent search engine indexing and create Signature component for AI porn website promotion

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="robots" content="noindex">
     <title>Pronily</title>
-  <link rel="icon" href="/img/tripleminds_logo.jpg" type="image/jpeg" />
-  <link rel="apple-touch-icon" href="/img/tripleminds_logo.jpg" />
+  <link rel="icon" href="/img/Pornily.png" type="image/jpeg" />
+  <link rel="apple-touch-icon" href="/img/Pornily.png" />
   </head>
   <body style="margin:0;">
     <div id="root"></div>
