--- a/frontend/index.html
+++ b/frontend/index.html
@@ -37,9 +37,9 @@
     <link rel="canonical" href="https://pornily.ai/" />
     
     <!-- Favicons -->
-    <link rel="icon" href="/img/favico.png" type="image/png" />
-    <link rel="apple-touch-icon" href="/img/Pornily.png" />
-    <link rel="shortcut icon" href="/img/Pornily.png" />
+    <link rel="icon" href="/img/Pornily.svg" type="image/png" />
+    <link rel="apple-touch-icon" href="/img/Pornily.svg" />
+    <link rel="shortcut icon" href="/img/Pornily.svg" />
     
     <!-- Structured Data -->
     <script type="application/ld+json">
